--- a/source/index.html
+++ b/source/index.html
@@ -260,7 +260,7 @@
             <div class="feedback__swiper swiper">
               <button class="feedback__button feedback__swiper-prev">
                 <svg width="27" height="71" viewBox="0 0 27 71">
-                  <use href="img/sprite.svg#arrow"></use>
+                  <use href="./img/sprite.svg#arrow"></use>
                 </svg>
               </button>
               <div class="feedback__list swiper-wrapper">
@@ -285,7 +285,7 @@
               </div>
               <button class="feedback__button feedback__swiper-next">
                 <svg width="27" height="71" viewBox="0 0 27 71">
-                  <use href="img/sprite.svg#arrow"></use>
+                  <use href="./img/sprite.svg#arrow"></use>
                 </svg>
               </button>
             </div>
