--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">
+      <header class="header" data-header="sticky">
         <div class="header__wrapper">
           <a class="header__logo">
             <picture>
